--- a/src/app/public/dashboard/dashboard.component.html
+++ b/src/app/public/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
             <div class="header-container inverse" >
               <nb-actions size="medium" >
                 <nb-action  >
-                  <nb-user [name]="usuarioActivo?.nombre" [picture]="usuarioActivo?.foto"></nb-user>
+                  <nb-user [name]="usuarioActivo?.nombre" [picture]="usuarioActivo?.foto" (click)="goToConfiguracion()"></nb-user>
                 </nb-action>
               </nb-actions>
             </div>
