--- a/src/app/public/configuracion/configuracion.component.scss
+++ b/src/app/public/configuracion/configuracion.component.scss
@@ -1,12 +1,11 @@
 i {
     padding:0px;
-    margin-bottom:25px;
-    margin-top:25px;
     font:normal normal normal 14px/1 FontAwesome;
     font-size:16px;
     font-style: normal;
-    width:100%;
     color:white;
+    padding-right:10px;
+    padding-left: 10px;
 }
 
 p {
@@ -19,7 +18,8 @@ p {
     color: red;
     font-size: 12px;
     padding: 15px;
-    border:1px solid #EFEFEF
+    border:1px solid #EFEFEF;
+    width:20%;
 }
 
 .btn-blanco:hover{
@@ -29,4 +29,46 @@ p {
     font-weight:bold;
     padding: 15px;
     border:1px solid #EFEFEF
+}
+
+.btn-azul{
+    padding: 0px;
+    padding-left: 20px;
+    color: blue;
+    background-color: white;
+}
+
+.btn-azul:hover{
+    padding: 0px;
+    padding-left: 20px;
+    color: blue;
+    background-color: white;
+    font-weight: bold;
+}
+
+.btn-azul2{
+    background-color: #3D98DE;
+    color: white;
+    width: 20%;
+    font-size: 9px;
+    padding: 10px!important;   
+}
+.btn-azul3{
+    background-color: white;
+    color: blue;
+    font-size: 12px;
+    padding: 15px;
+    border:1px solid #EFEFEF;
+    width:20%;
+}
+
+.btn-azul3:hover{
+    background-color: white;
+    color: blue;
+    font-size: 12px;
+    font-weight:bold;
+    padding: 15px;
+    border:1px solid #EFEFEF;
+    width:20%;
+
 }
