--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
@@ -112,6 +112,7 @@ nb-card-header{
     font-size: 9px;
     border: none;
     cursor: pointer;
+    font-weight: bold;
   }
 .dropdown-content a {
     color: black;
