--- a/src/app/public/importar-flujo/importar-flujo.component.html
+++ b/src/app/public/importar-flujo/importar-flujo.component.html
@@ -45,7 +45,7 @@
           <div class="col-sm-1"><span style='font-size:30px;'>&#9989;</span> </div>
           <div class="col-sm-4">
             <p style="margin:0px; font-weight: bold; font-size: 18px">Método de importación</p>
-            <p>Archivo .csv</p>
+            <p>Archivo .xlsx</p>
           </div>
         </div>
         <div class="row" style="padding-top:20px;border-top-style: solid;border-color: #CCCCCC;border-width: 0.2px">
@@ -113,9 +113,9 @@
         <p style="margin-top:20px">Selecciona un máximo de 5 columnas a importar</p>
       </div>
       <div *ngIf="etapa===1"><input type="radio" id="radio">
-        <label for="radio" style="padding-left:10px">Importar un archivo .CSV</label>
+        <label for="radio" style="padding-left:10px">Importar un archivo .xlsx</label>
         <br>
-        <p>Importa el flujo de caja de este negocio en un archivo .CSV</p>
+        <p>Importa el flujo de caja de este negocio en un archivo .xlsx</p>
         <br><br>
         <p style="font-weight: bold">Sube tu archivo:</p>
         <div>
