--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
@@ -120,3 +120,23 @@ nb-card-header{
     text-decoration: none;
     display: block;
   }
+
+  .btn-azul3{
+    background-color: white;
+    color: #3D98DE;
+    font-size: 12px;
+    padding: 10px;
+    border:1px solid #3D98DE;
+    width:100%;
+}
+
+.btn-azul3:hover{
+    background-color: white;
+    color: #3D98DE;
+    font-size: 12px;
+    font-weight:bold;
+    padding: 10px;
+    border:1px solid #3D98DE;
+    width:100%;
+
+}
