--- a/src/app/public/signup/signup.component.html
+++ b/src/app/public/signup/signup.component.html
@@ -39,6 +39,13 @@
               placeholder="Confirmar contraseña" 
               class="form-control">
           </div>
+          <div class="form-group" >
+            <select name="pais" id="pais"style="width:100%;height:51.72px">
+              <option value="colombia">Colombia</option>
+              <option value="peru">Perú</option>
+              <option value="brasil">Barsil</option>
+            </select>
+          </div>
           <div class="form-group">
             <button class="btn btn-azul">Continuar</button>
           </div> 
